--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "author": "dpohvar@gmail.com",
   "scripts": {
-    "build": "parcel build src/index.html",
-    "dev": "parcel src/index.html --no-cache",
+    "build": "parcel build src/index.html --public-url .",
+    "dev": "parcel src/index.html --no-cache --public-url /",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
