--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,11 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "tsc:*": ["@parcel/transformer-typescript-tsc", "@parcel/transformer-babel", "./dev/transformer-text", "..."]
+    "tsc:*": [
+			"@parcel/transformer-typescript-tsc",
+			"@parcel/transformer-babel",
+			"./dev/transformer-text",
+			"..."
+		]
   }
 }
