--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		"lib": ["ES2020", "DOM"],
 		"allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "jsx": "react"
+		"resolveJsonModule": true,
+		"jsx": "react"
 	}
 }
