--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connect-four",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "license": "MIT",
   "author": "dpohvar@gmail.com",
@@ -15,6 +15,7 @@
     "bundle-text": "file:",
     "connect-four": "file:",
     "controllers": "^0.0.2",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "varhub-ws-client": "git+https://github.com/flinbein/varhub-ws-client.git#1.0.9"
