--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "connect-four",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "",
   "license": "MIT",
   "author": "dpohvar@gmail.com",
@@ -12,26 +12,16 @@
   },
   "dependencies": {
     "babel-preset-minify": "^0.5.2",
-    "bundle-text": "file:",
-    "connect-four": "file:",
     "controllers": "^0.0.2",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "varhub-ws-client": "git+https://github.com/flinbein/varhub-ws-client.git#1.0.9"
+    "varhub-ws-client": "git+https://github.com/flinbein/varhub-ws-client.git#1.0.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@parcel/optimizer-blob-url": "^2.10.3",
-    "@parcel/optimizer-data-url": "^2.10.3",
-    "@parcel/packager-ts": "^2.10.3",
-    "@parcel/resolver-glob": "^2.10.3",
-    "@parcel/transformer-inline": "^2.10.3",
-    "@parcel/transformer-inline-string": "^2.10.3",
-    "@parcel/transformer-typescript-tsc": "^2.10.3",
-    "@parcel/transformer-typescript-types": "^2.10.3",
+    "@flinbein/parcel-config-varhub": "git+https://github.com/flinbein/parcel-config-varhub.git#1.0.2",
     "@types/react": "^18.2.37",
-    "@types/typescript": "^2.0.0",
+    "mime-types": "^2.1.35",
     "parcel": "^2.10.3",
     "process": "^0.11.10",
     "typescript": "^5.2.2"
