--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "connect-four",
-  "version": "0.0.9",
-  "description": "",
+  "name": "@flinbein/connect-four",
+  "version": "1.0.0",
+	"type": "module",
+	"description": "",
   "license": "MIT",
   "author": "dpohvar@gmail.com",
+  "types": "./src/types.d.ts",
   "scripts": {
     "build": "parcel build src/index.html --log-level error --no-cache --public-url .",
     "dev": "parcel src/index.html --no-cache --public-url /",
@@ -11,19 +13,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "babel-preset-minify": "^0.5.2",
-    "controllers": "^0.0.2",
+    "@flinbein/varhub-web-client": "git+https://github.com/flinbein/varhub-web-client.git#1.0.5",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "varhub-ws-client": "git+https://github.com/flinbein/varhub-ws-client.git#1.0.15"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@flinbein/parcel-config-varhub": "git+https://github.com/flinbein/parcel-config-varhub.git#1.0.2",
-    "@types/react": "^18.2.37",
-    "mime-types": "^2.1.35",
-    "parcel": "^2.10.3",
+		"@flinbein/parcel-config-varhub": "git+https://github.com/flinbein/parcel-config-varhub.git#2.0.0",
+		"@flinbein/varhub-api-network": "git+https://github.com/flinbein/varhub-api-network#1.0.3",
+		"@types/parcel-config-varhub": "file:./node_modules/@flinbein/parcel-config-varhub",
+		"@types/varhub-web-client": "file:./node_modules/@flinbein/varhub-web-client",
+		"@types/react": "^18.2.79",
+		"@types/react-dom": "^18.2.25",
+		"@types/node": "^20.12.7",
+		"@types/qrcode": "^1.5.5",
+    "parcel": "^2.12.0",
     "process": "^0.11.10",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.5"
   }
 }
