--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "@flinbein/connect-four",
   "version": "1.0.1",
-	"type": "module",
-	"description": "",
+  "type": "module",
+  "description": "",
   "license": "MIT",
   "author": "dpohvar@gmail.com",
   "types": "./src/types.d.ts",
-	"targets": {
-		"types": false
-	},
+  "targets": {
+    "types": false
+  },
   "scripts": {
     "build": "parcel build src/index.html --log-level error --no-cache --public-url .",
-    "dev": "parcel src/index.html --no-cache --public-url /",
+    "dev": "parcel src/index.html --port 58100 --no-cache --public-url /",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@flinbein/varhub-web-client": "git+https://github.com/flinbein/varhub-web-client.git#1.0.5",
+    "@flinbein/varhub-web-client": "git+https://github.com/flinbein/varhub-web-client.git#1.0.8",
+    "effector": "^23.2.1",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-		"@flinbein/parcel-config-varhub": "git+https://github.com/flinbein/parcel-config-varhub.git#2.0.0",
-		"@flinbein/varhub-api-network": "git+https://github.com/flinbein/varhub-api-network#1.0.3",
-		"@types/parcel-config-varhub": "file:./node_modules/@flinbein/parcel-config-varhub",
-		"@types/varhub-web-client": "file:./node_modules/@flinbein/varhub-web-client",
-		"@types/react": "^18.2.79",
-		"@types/react-dom": "^18.2.25",
-		"@types/node": "^20.12.7",
-		"@types/qrcode": "^1.5.5",
+    "@flinbein/parcel-config-varhub": "git+https://github.com/flinbein/parcel-config-varhub.git#2.0.0",
+    "@flinbein/varhub-api-network": "git+https://github.com/flinbein/varhub-api-network#1.0.3",
+    "@types/node": "^20.12.7",
+    "@types/parcel-config-varhub": "file:./node_modules/@flinbein/parcel-config-varhub",
+    "@types/qrcode": "^1.5.5",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@types/varhub-web-client": "file:./node_modules/@flinbein/varhub-web-client",
     "parcel": "^2.12.0",
     "process": "^0.11.10",
     "typescript": "^5.4.5"
